policies/debian.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debian-sleep
spec:
  containers:
  - name: debian
    image: debian
    command: ["sleep", "3600"]  # Sleep for 1 hour (3600 seconds)
